feat: rematoracao total do programa